tests/good/lexical/008-int-2.clap
val x = 0000000000000042

