tests/bad/lexical/011-int-5.clap
val x = 0xcafebabecomprendo?

